@@ -1,6 +1,6 @@
 package ru.yandex.practicum.filmorate.storage;
 
-import lombok.RequiredArgsConstructor;
+import lombok.AllArgsConstructor;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Repository;
 import ru.yandex.practicum.filmorate.model.Genre;
@@ -9,7 +9,7 @@ import java.util.List;
 import java.util.Optional;
 
 @Repository
-@RequiredArgsConstructor
+@AllArgsConstructor
 public class GenreDbStorage {
 
     private static final String FIND_ALL_QUERY = "SELECT * FROM genres ORDER BY genre_id";
@@ -26,6 +26,6 @@ public class GenreDbStorage {
         List<Genre> list = jdbcTemplate.query(FIND_BY_GENRE_QUERY, (rs, rowNum) ->
                 new Genre(rs.getLong("genre_id"), rs.getString("name")), id
         );
-        return list.isEmpty() ? Optional.empty() : Optional.ofNullable(list.get(0));
+        return list.isEmpty() ? Optional.empty() : Optional.ofNullable(list.getFirst());
     }
 }
